Password reset functionality added in login page

--- a/templates/heart_disease_predict.html
+++ b/templates/heart_disease_predict.html
@@ -22,7 +22,7 @@
                 <div class="col-md-6 form-group">
                     <label for="sex">Sex:</label>
                     <select name="sex" id="sex" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select gender</option>
                         <option value="0">Female</option>
                         <option value="1">Male</option>
                     </select>
@@ -33,7 +33,7 @@
                 <div class="col-md-6 form-group">
                     <label for="cp">Chest Pain Type:</label>
                     <select name="cp" id="cp" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select chest pain type</option>
                         <option value="0">Typical Angina</option>
                         <option value="1">Atypical Angina</option>
                         <option value="2">Non-anginal Pain</option>
@@ -41,20 +41,20 @@
                     </select>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label for="trestbps">Resting Blood Pressure[Systolic] (mm Hg)[Range: 50 t0 200 mmHg]:</label>
+                    <label for="trestbps">Resting Blood Pressure[Systolic] (mm Hg) [Range: 50 t0 200 mmHg]:</label>
                     <input type="number" name="trestbps" id="trestbps" min="50" max="200" class="form-control" required>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6 form-group">
-                    <label for="chol">Cholesterol (mg/dl)[Range: 30 to 500 mg/dL]:</label>
+                    <label for="chol">Cholesterol (mg/dl) [Range: 30 to 500 mg/dL]:</label>
                     <input type="number" name="chol" id="chol" min="30" max="500" class="form-control" required>
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="fbs">Fasting Blood Sugar:</label>
                     <select name="fbs" id="fbs" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select fasting blood sugar</option>
                         <option value="0">≤ 120 mg/dl</option>
                         <option value="1">> 120 mg/dl</option>
                     </select>
@@ -65,14 +65,14 @@
                 <div class="col-md-6 form-group">
                     <label for="restecg">Resting ECG:</label>
                     <select name="restecg" id="restecg" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select Resting ECG</option>
                         <option value="0">Normal</option>
                         <option value="1">ST-T Wave Abnormality</option>
                         <option value="2">Left Ventricular Hypertrophy</option>
                     </select>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label for="thalach">Max Heart Rate Achieved (bpm)[Range: 60 to 250 bpm]:</label>
+                    <label for="thalach">Max Heart Rate Achieved (bpm) [Range: 60 to 250 bpm]:</label>
                     <input type="number" name="thalach" id="thalach" min="60" max="250" class="form-control" required>
                 </div>
             </div>
@@ -81,13 +81,13 @@
                 <div class="col-md-6 form-group">
                     <label for="exang">Exercise Induced Angina:</label>
                     <select name="exang" id="exang" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select exercise induced angina</option>
                         <option value="0">No</option>
                         <option value="1">Yes</option>
                     </select>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label for="oldpeak">ST Depression Induced by Exercise[Range: 0 to 10 mm]:</label>
+                    <label for="oldpeak">ST Depression Induced by Exercise [Range: 0 to 10 mm]:</label>
                     <input type="number" name="oldpeak" id="oldpeak" step="0.1" min="0" max="10" class="form-control" required>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                 <div class="col-md-6 form-group">
                     <label for="slope">Slope of the Peak Exercise ST:</label>
                     <select name="slope" id="slope" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select slope of peak Exercise ST</option>
                         <option value="0">Upsloping</option>
                         <option value="1">Flat</option>
                         <option value="2">Downsloping</option>
@@ -105,7 +105,7 @@
                 <div class="col-md-6 form-group">
                     <label for="ca">Number of Major Vessels:</label>
                     <select name="ca" id="ca" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select number of major vessels</option>
                         <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -118,7 +118,7 @@
                 <div class="col-md-6 form-group">
                     <label for="thal">Thalassemia:</label>
                     <select name="thal" id="thal" class="form-control" required>
-                        <option value="" selected disabled>Select an option</option>
+                        <option value="" selected disabled>Select thalassemia</option>
                         <option value="0">Normal</option>
                         <option value="1">Fixed Defect</option>
                         <option value="2">Reversible Defect</option>
