--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,7 @@
     <style>
       /* Navbar Styles */
       .navbar {
-        background-color: #121111;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        background-color: transparent;
       }
 
       .navbar-brand {
@@ -107,7 +106,7 @@
           <img
             src="{% static 'assets/MedifaiTransWhite.png' %}"
             alt="MedifAI Logo"
-            style="height: 80px; width: 150px"
+            style="height: 65px; width: 105px"
           />
         </a>
         <button
@@ -124,7 +123,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home">Home</a>
+              <a class="nav-link active" aria-current="page" href="/home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
@@ -141,36 +142,57 @@
             <li class="nav-item">
               <a class="nav-link" href="/profile">Profile</a>
             </li>
-    
+
             {% if user.is_superuser %}
-              <!-- Admin-Only Dropdown for Patient History -->
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Patient History
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="{% url 'heart_patient_history_view' %}">Heart Patient History</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'diabetes_patient_history_view' %}">Diabetes Patient History</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'symptoms_prediction_history' %}">Symptoms-Based Prediction History</a>
-                  </li>
-                </ul>
-              </li>
+            <!-- Admin-Only Dropdown for Patient History -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Patient History
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'heart_patient_history_view' %}"
+                    >Heart Patient History</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'diabetes_patient_history_view' %}"
+                    >Diabetes Patient History</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'symptoms_prediction_history' %}"
+                    >Symptoms-Based Prediction History</a
+                  >
+                </li>
+              </ul>
+            </li>
             {% endif %}
           </ul>
         </div>
       </div>
     </nav>
-    
+
     <!-- Include Bootstrap 5 CSS and JS files -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-       
 
     <!-- Main Content Area (Content will be injected here) -->
     {% block content %} {% endblock content %}
