--- a/templates/about.html
+++ b/templates/about.html
@@ -37,14 +37,20 @@
 
 {% block extra_css %}
     <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/home-page.png' %}");
-        }
+      body, html {
+        height: 100vh;  /* Ensures full viewport height */
+        width: 100vw;   /* Ensures full viewport width */
+        margin: 0;
+        padding: 0;
+        font-family: 'Arial', sans-serif;
+        background-image: url("{% static 'assets/profile.jpg' %}");
+        background-size: cover;         /* Ensures the image covers the full screen */
+        background-position: center;     /* Centers the image */
+        background-repeat: no-repeat;    /* Prevents tiling */
+        background-attachment: fixed;    /* Keeps the background fixed while scrolling */
+        display: flex;
+        flex-direction: column;
+    }
         .content {
           flex: 1;
           padding: 60px 15px;
