--- a/templates/home.html
+++ b/templates/home.html
@@ -56,18 +56,25 @@
 {% block extra_css %}
     <style>
         /* Specific Styles for Home Page */
-        html, body {
-            height: 100%;
+        body, html {
+            height: 100vh;  /* Ensures full viewport height */
+            width: 100vw;   /* Ensures full viewport width */
             margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-image: url("{% static 'assets/profile.jpg' %}");
+            background-size: cover;         /* Ensures the image covers the full screen */
+            background-position: center;     /* Centers the image */
+            background-repeat: no-repeat;    /* Prevents tiling */
+            background-attachment: fixed;    /* Keeps the background fixed while scrolling */
             display: flex;
             flex-direction: column;
-            font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/home-page.png' %}");
         }
         h1,.page-desc{
-            color: rgb(211, 236, 23);
+            color:#001F3F;
         }
         .content {
+            
             flex: 1; 
             padding: 50px 10px;
             text-align: center;
