--- a/templates/terms.html
+++ b/templates/terms.html
@@ -34,7 +34,7 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/home-page.png' %}");
+        background-image: url("{% static 'assets/profile.jpg' %}");
         display: flex;
         flex-direction: column;
         }
