--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <style>
       /* Navbar Styles */
       .navbar {
-        background-color: transparent;
+        background-color: #121111;
       }
 
       .navbar-brand {
