--- a/templates/diabetes_patient_history.html
+++ b/templates/diabetes_patient_history.html
@@ -60,7 +60,7 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/home-page.png' %}");
+        background-image: url("{% static 'assets/profile.jpg' %}");
         background-size: cover;
         background-attachment: fixed;
         display: flex;
