--- a/templates/explore_more.html
+++ b/templates/explore_more.html
@@ -82,7 +82,7 @@
             display: flex;
             flex-direction: column;
             font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/home-page.png' %}");
+            background-image: url("{% static 'assets/profile.jpg' %}");
         }
         .content {
           flex: 1;
