--- a/templates/home.html
+++ b/templates/home.html
@@ -57,16 +57,16 @@
     <style>
         /* Specific Styles for Home Page */
         body, html {
-            height: 100vh;  /* Ensures full viewport height */
-            width: 100vw;   /* Ensures full viewport width */
+            height: 100%;
+            /* width: 100vw; */
             margin: 0;
-            padding: 0;
+            /* padding: 0; */
             font-family: 'Arial', sans-serif;
             background-image: url("{% static 'assets/profile.jpg' %}");
-            background-size: cover;         /* Ensures the image covers the full screen */
-            background-position: center;     /* Centers the image */
-            background-repeat: no-repeat;    /* Prevents tiling */
-            background-attachment: fixed;    /* Keeps the background fixed while scrolling */
+            background-size: cover;
+            /* background-position: center; */
+            /* background-repeat: no-repeat; */
+            background-attachment: fixed;
             display: flex;
             flex-direction: column;
         }
