--- a/templates/index.html
+++ b/templates/index.html
@@ -1071,7 +1071,7 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/home-page.png' %}");
+        background-image: url("{% static 'assets/profile.jpg' %}");
         color: #333;
       }
         .page-container {
