--- a/templates/success.html
+++ b/templates/success.html
@@ -10,9 +10,9 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
+        {% comment %} background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
         color: #333;
-        display: flex;
+        display: flex; {% endcomment %}
         align-items: center;
         justify-content: center;
       }
