--- a/templates/diabetes_help.html
+++ b/templates/diabetes_help.html
@@ -59,11 +59,14 @@
 <style>
     body, html {
         height: 100%;
-        margin: 0;
-        font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/profile.jpg' %}");
-        display: flex;
-        flex-direction: column;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-image: url("{% static 'assets/profile.jpg' %}");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
     }
     .content {
         flex: 1;
