--- a/templates/heart_disease_help.html
+++ b/templates/heart_disease_help.html
@@ -114,6 +114,9 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background-image: url("{% static 'assets/profile.jpg' %}");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
         }
