--- a/templates/home.html
+++ b/templates/home.html
@@ -58,15 +58,12 @@
         /* Specific Styles for Home Page */
         body, html {
             height: 100%;
-            /* width: 100vw; */
             margin: 0;
-            /* padding: 0; */
             font-family: 'Arial', sans-serif;
             background-image: url("{% static 'assets/profile.jpg' %}");
             background-size: cover;
-            /* background-position: center; */
-            /* background-repeat: no-repeat; */
-            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
         }
