--- a/templates/symptoms_prediction_history.html
+++ b/templates/symptoms_prediction_history.html
@@ -49,7 +49,8 @@
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/profile.jpg' %}");
         background-size: cover;
-        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
         display: flex;
         flex-direction: column;
     }
