added responsiveness to the application

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,17 @@
         transition: 0.3s;
       }
 
+      @media (max-width: 576px) {
+        .navbar-brand {
+          font-size: 24px;
+        }
+
+        .nav-link {
+          font-size: 16px;
+          margin-right: 5px;
+        }
+      }
+
       /* Footer Styles */
       footer {
         background-color: #121111;
