--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <title>Login Page - MedifAI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -114,6 +115,22 @@
             margin-top: 10px; 
             text-align: center; 
         }        
+        @media (max-width: 576px) {
+            form {
+                width: 90%;
+                padding: 30px 20px;
+            }
+            form h3 {
+                font-size: 24px;
+            }
+            input {
+                padding: 8px;
+            }
+            button {
+                padding: 12px 0;
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 <body>    
